# goit-pythonweb-hw-10

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: a07bb613e8c1_initial_migration_from_scratch.py
src/api/: auth.py  contacts.py  users.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/schemas/: contacts.py
src/services/: auth.py  contacts.py  email.py  users.py
src/services/templates/: verify_email.html
