[tool.poetry]
name = "goit-pythonweb-hw-08"
version = "0.1.0"
description = ""
authors = ["kryvosheyin <alex.kryvosheyin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
uvicorn = "^0.33.0"
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
pydantic = "^2.10.3"
asyncpg = "^0.30.0"
greenlet = "^3.1.1"
alembic = "^1.14.0"
pydantic-settings = "^2.7.0"
slowapi = "^0.1.9"
passlib = "^1.7.4"
jose = "^1.0.0"
fastapi-mail = "^1.4.2"
cloudinary = "^1.41.0"
libgravatar = "^1.0.4"
jwt = "^1.3.1"
python-jose = "^3.3.0"
logger = "^1.4"
bcrypt = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
